--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,7 @@ sysinfo = "0.29.3"
 thiserror = "1.0.44"
 clap_complete = "4.3.1"
 anyhow = "1.0.71"
+comfy-table = "7.1.0"
 
 [dev-dependencies]
 pretty_assertions = "1.4.0"
@@ -38,6 +39,12 @@ test-log = "0.2.12"
 
 [build-dependencies]
 embed-resource = "1.8.0"
+
+[profile.release]
+strip = true
+lto = true
+codegen-units = 1
+opt-level = 3
 
 [target.'cfg(windows)'.dependencies]
 csv = "1.2.2"
